--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry Paribahan</title>
+    <!-- Daisy UI and Tailwind css -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Navigation section here -->
+    <nav class="container max-w-[1440px] mx-auto pl-0 md:pl-3 pr-4 lg:px-[135px] mt-4 lg:mt-15">
+        <div class="navbar bg-base-100 px-0 lg:px-0">
+            <div class="navbar-start sm:items-start">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost  lg:hidden">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                </div>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52  items-center text-zinc-700  text-base font-normal">
+                    <li class="font-bold text-primary-bg"><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Destination</a></li>
+                    <li><a>Search</a></li>
+                </ul>
+              </div>
+              <a class="btn btn-ghost lg:text-neutral-900 text-2xl md:text-4xl font-extrabold  gap-0  px-1 md:px-2 lg:px-4 ">S-Ticket</a>
+            </div>
+            <div class="navbar-center hidden  lg:flex">
+              <ul class="menu menu-horizontal text-zinc-700  text-base font-normal px-1">
+                <li class="font-bold text-primary-bg"><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Destination</a></li>
+                <li><a>Search</a></li> 
+              </ul>
+            </div>
+            <div class="navbar-end">
+              <button type="button" class=" border border-[#97EA89] bg-[#E8FAE5] text-black text-base md:text-xl font-bold px-2 py-2 lg:px-4 lg:py-2.5 lg:ml-6 rounded-lg"><a href="#" class="flex items-center gap-3 text-[#1DD100]">Bus <span><img src="images/bus-icon.png" alt=""></span></a></button>
+            </div>
+        </div>
+    </nav>
+    <!-- Header section here -->
+    <header class="container max-w-[1440px] mx-auto px-5 rounded-3xl">
+        
+    </header>
+    <!-- Main section here -->
+    <main>
+
+    </main>
+    <!-- Footer section -->
+    <footer>
+
+    </footer>
 </body>
 </html>
