--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+     <!-- Tailwind custom style -->
+     <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'primary-bg': '#1DD100',
+              }
+            }
+          }
+        }
+    </script>
+    <!-- CSS custom style -->
+    <style>
+        .font-raleway{
+            font-family: "Raleway", sans-serif;
+        }
+        .font-inter{
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation section here -->
@@ -28,7 +50,7 @@
                     <li><a>Search</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost lg:text-neutral-900 text-2xl md:text-4xl font-extrabold  gap-0  px-1 md:px-2 lg:px-4 ">S-Ticket</a>
+              <a class="btn btn-ghost lg:text-neutral-900 text-2xl font-raleway md:text-4xl font-extrabold  gap-0  px-1 md:px-2 lg:px-4 ">S-Ticket</a>
             </div>
             <div class="navbar-center hidden  lg:flex">
               <ul class="menu menu-horizontal text-zinc-700  text-base font-normal px-1">
@@ -39,14 +61,50 @@
               </ul>
             </div>
             <div class="navbar-end">
-              <button type="button" class=" border border-[#97EA89] bg-[#E8FAE5] text-black text-base md:text-xl font-bold px-2 py-2 lg:px-4 lg:py-2.5 lg:ml-6 rounded-lg"><a href="#" class="flex items-center gap-3 text-[#1DD100]">Bus <span><img src="images/bus-icon.png" alt=""></span></a></button>
+              <button type="button" class=" border border-[#97EA89] bg-[#E8FAE5] text-black text-base md:text-xl font-bold px-2 py-2 lg:px-4 lg:py-2.5 lg:ml-6 rounded-lg"><a href="#" class="flex items-center gap-3 text-[#1DD100] font-raleway font-bold">Bus <span><img src="images/bus-icon.png" alt=""></span></a></button>
             </div>
         </div>
     </nav>
     <!-- Header section here -->
-    <header class="container max-w-[1440px] mx-auto px-5 rounded-3xl">
-        
+    <header class="container max-w-[1440px] mx-auto px-5 rounded-3xl mt-7 lg:px-[135px]">
+        <div class="hero rounded-3xl md:min-h-[550px]" style="background-image: url(images/banner.png);">
+            <div class="hero-content text-center text-neutral-content pt-10 md:pt-16 pb-20 md:pb-32">
+              <div class="max-w-[44rem]">
+                <h1 class="mb-5 text-3xl md:leading-[4rem] lg:leading-[86px] md:text-[64px] font-bold text-white">End-to-End Travel With <br><span class="text-primary-bg">S Paribahan</span></h1>
+                <p class=" mb-8 max-w-xl mx-auto">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
+                <button class="btn bg-primary-bg hover:bg-transparent hover:text-white hover:border-primary-bg hover:border border-primary-bg"><a href="#buyNow">Buy Tickets</a></button>
+              </div>
+            </div>
+          </div>
+          <!-- card container -->
+          <div class="relative -mt-12 font-inter flex flex-wrap justify-center gap-6">
+            <!-- card-1 -->
+            <div class="max-w-[308px] flex items-center justify-evenly border-primary-bg border-b-[3px] border-b rounded-3xl  bg-white p-8">
+                <figure><img src="images/people.png" alt=""></figure>
+                <div class=" ml-4">
+                    <h2 class="text-black text-2xl md:text-4xl font-bold">500K+</h2>
+                    <p class="text-[#686A71] font-normal">Registered users</p>
+                </div>
+            </div>
+            <!-- card-2 -->
+            <div class="max-w-[308px] flex items-center justify-evenly border-primary-bg border-b-[3px] border-b rounded-3xl  bg-white p-8">
+                <figure><img src="images/ticket-cupon.png" alt=""></figure>
+                <div class=" ml-4">
+                    <h2 class="text-black text-2xl md:text-4xl font-bold">1.7 lacks</h2>
+                    <p class="text-[#686A71] font-normal">Tickets sold</p>
+                </div>
+            </div>
+            <!-- card-3 -->
+            <div class="max-w-[308px] flex items-center justify-evenly border-primary-bg border-b-[3px] border-b rounded-3xl  bg-white p-8">
+                <figure><img src="images/stoppage.png" alt=""></figure>
+                <div class=" ml-4">
+                    <h2 class="text-black text-2xl md:text-4xl font-bold">80K+</h2>
+                    <p class="text-[#686A71] font-normal">Rental partners</p>
+                </div>
+            </div>
+          </div>
     </header>
+    
     <!-- Main section here -->
     <main>
 
