--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
     <!-- Header section here -->
-    <header class="container max-w-[1440px] mx-auto px-5 rounded-3xl mt-7 lg:px-[135px]">
+    <header class="container max-w-[1440px] mx-auto rounded-3xl mt-7 px-5 lg:px-[135px]">
         <div class="hero rounded-3xl md:min-h-[550px]" style="background-image: url(images/banner.png);">
             <div class="hero-content text-center text-neutral-content pt-10 md:pt-16 pb-20 md:pb-32">
               <div class="max-w-[44rem]">
@@ -105,7 +105,7 @@
             </div>
           </div>
     </header>
-    
+
     <!-- Main section here -->
     <main class="container max-w-[1440px] mx-auto">
         <!-- offer section -->
@@ -151,9 +151,45 @@
                  </div>
 
                  <div class="text-center mt-16">
-                    <button class="btn bg-white hover:bg-primary-bg hover:text-white border-primary-bg text-primary-bg text-xl font-bold justify-center items-center"><a href="">See All Offers</button>
+                    <button class="btn bg-white hover:bg-primary-bg hover:text-white border-primary-bg text-primary-bg text-xl font-bold justify-center items-center"><a href="">See All Offers</a></button>
                  </div>
             </section>
+        </div>
+        <!-- Ticket buy container -->
+        <div class="mt-14 md:mt-28 min-h-96 bg-secondary-bg rounded-t-[44px] md:rounded-t-[88px] border-t-2 border-primary-bg px-5 lg:px-[135px] pt-11 lg:pt-24 pb-16 lg:pb-28">
+          <!-- PH Paribahan section -->
+          <section class="">
+            <h1 class="font-raleway font-bold text-3xl md:text-[40px] text-center">Strawberry Paribahan</h1>
+            <p class="max-w-[736px] text-[#65676E] font-inter font-normal text-xs md:text-xl text-center mx-auto mt-4 lg:mt-6 mb-6 lg:mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
+            <!-- Greenline Paribahan Container -->
+            <div class="rounded-3xl bg-white p-4 md:p-8">
+              <!-- Route heading section -->
+              <div class="flex justify-between">
+                <div class="flex items-center gap-4">
+                  <figure><img src="images/bus-logo.png" alt=""></figure>
+                  <div><h1 class="font-raleway text-xl md:text-3xl font-bold text-[#030712] ">Greenline Paribahan</h1>
+                    <p class="font-inter text-xs md:text-[18px] text-[#686A71]">Coach-009-WEB ! AC_Business</p></div>
+                </div>
+                <!-- Seats left section -->
+                <div class="flex items-center gap-2 px-2 md:px-[17px] py-[14px] bg-[#E8FAE5] rounded-xl">
+                  <figure><img src="images/seat-green.png" alt=""></figure>
+                  <p class="text-primary-bg text-xs md:text[18px] font-medium "><span>40 </span>Seats left</p>
+                </div>    
+              </div>
+              <!-- Route main section -->
+              <div class="p-3 md:p-8 bg-secondary-bg mt-3 md-6 rounded-3xl text-[#65676E] font-inter font-medium text-[18px]">
+                <div class="flex justify-between py-6"><h3>Route</h3> <h3>Dhaka - Sylhet</h3></div>
+                <div class="flex justify-between py-6 border-dashed border-y"><h3>Departure Time</h3> <h3>9:00 PM</h3></div>
+                <div class="flex flex-wrap justify-center gap-6 mt-3 md:mt-6">
+                  <button class="btn">Boarding Point - Laxmipur</button>
+                  <button class="btn">Dropping Point - Bogura</button>
+                  <button class="btn">Est. Time - 11 Hour</button>
+                </div>
+              </div>
+              <!-- Ticket price   section -->
+              <div></div>
+            </div>
+          </section>
         </div>
     </main>
     <!-- Footer section -->
