updated the Ticket buy section

--- a/index.html
+++ b/index.html
@@ -162,32 +162,39 @@
             <h1 class="font-raleway font-bold text-3xl md:text-[40px] text-center">Strawberry Paribahan</h1>
             <p class="max-w-[736px] text-[#65676E] font-inter font-normal text-xs md:text-xl text-center mx-auto mt-4 lg:mt-6 mb-6 lg:mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
             <!-- Greenline Paribahan Container -->
-            <div class="rounded-3xl bg-white p-4 md:p-8">
-              <!-- Route heading section -->
-              <div class="flex justify-between">
-                <div class="flex items-center gap-4">
-                  <figure><img src="images/bus-logo.png" alt=""></figure>
-                  <div><h1 class="font-raleway text-xl md:text-3xl font-bold text-[#030712] ">Greenline Paribahan</h1>
-                    <p class="font-inter text-xs md:text-[18px] text-[#686A71]">Coach-009-WEB ! AC_Business</p></div>
+            <div class=" flex flex-wrap flex-col md:flex-row items-center justify-center lg:justify-start gap-6 rounded-3xl bg-white p-4 md:p-8">
+              <!-- Route section -->
+              <div>
+                <!-- Route heading section -->
+                <div class="flex justify-between">
+                  <div class="flex flex-1 max-w-[412px] items-center gap-2 md:gap-4">
+                    <figure><img src="images/bus-logo.png" alt=""></figure>
+                    <div><h1 class="font-raleway text-[18px] md:text-3xl font-bold text-[#030712] ">Greenline Paribahan</h1>
+                      <p class="font-inter text-xs md:text-[18px] text-[#686A71]">Coach-009-WEB ! AC_Business</p></div>
+                  </div>
+                  <!-- Seats left section -->
+                  <div class="flex items-center gap-2 px-2 md:px-[17px] py-[14px] bg-[#E8FAE5] rounded-xl">
+                    <figure><img src="images/seat-green.png" alt=""></figure>
+                    <p class="text-primary-bg text-xs md:text-[18px] font-medium "><span>40 </span>Seats left</p>
+                  </div>    
                 </div>
-                <!-- Seats left section -->
-                <div class="flex items-center gap-2 px-2 md:px-[17px] py-[14px] bg-[#E8FAE5] rounded-xl">
-                  <figure><img src="images/seat-green.png" alt=""></figure>
-                  <p class="text-primary-bg text-xs md:text[18px] font-medium "><span>40 </span>Seats left</p>
-                </div>    
-              </div>
-              <!-- Route main section -->
-              <div class="p-3 md:p-8 bg-secondary-bg mt-3 md-6 rounded-3xl text-[#65676E] font-inter font-medium text-[18px]">
-                <div class="flex justify-between py-6"><h3>Route</h3> <h3>Dhaka - Sylhet</h3></div>
-                <div class="flex justify-between py-6 border-dashed border-y"><h3>Departure Time</h3> <h3>9:00 PM</h3></div>
-                <div class="flex flex-wrap justify-center gap-6 mt-3 md:mt-6">
-                  <button class="btn">Boarding Point - Laxmipur</button>
-                  <button class="btn">Dropping Point - Bogura</button>
-                  <button class="btn">Est. Time - 11 Hour</button>
+                <!-- Route main section -->
+                <div class="p-3 md:p-8 bg-secondary-bg mt-3 md-6 rounded-3xl text-[#65676E] font-inter font-medium text-[18px]">
+                  <div class="flex justify-between py-6"><h3>Route</h3> <h3 class="text-[#030712]">Dhaka - Sylhet</h3></div>
+                  <div class="flex justify-between py-6 border-dashed border-y"><h3>Departure Time</h3> <h3 class="text-[#030712]">9:00 PM</h3></div>
+                  <div class="flex flex-wrap justify-center gap-6 mt-3 md:mt-6">
+                    <button class="btn">Boarding Point - Laxmipur</button>
+                    <button class="btn">Dropping Point - Bogura</button>
+                    <button class="btn">Est. Time - 11 Hour</button>
+                  </div>
                 </div>
               </div>
-              <!-- Ticket price   section -->
-              <div></div>
+              <!-- Ticket price  section -->
+                <div class="flex flex-1 flex-col items-center justify-center">
+                  <figure><img src="images/fare.png" alt=""></figure>
+                  <h2 class="font-raleway text-3xl font-bold mt-6">550 Taka</h2>
+                  <p class="font-ralewaytext-2xl font-semibold text-[#686A71]">Per Seat</p>
+                </div>
             </div>
           </section>
         </div>
