--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                  </div>
 
                  <div class="text-center mt-16">
-                    <button class="btn bg-white hover:bg-primary-bg hover:text-white border-primary-bg text-primary-bg text-xl font-bold justify-center items-center"><a href="">See All Offers</a></button>
+                    <button class="btn bg-white hover:bg-primary-bg hover:text-white border-primary-bg text-primary-bg text-xl font-bold justify-center items-center"><a href="#">See All Offers</a></button>
                  </div>
             </section>
         </div>
@@ -199,9 +199,49 @@
           </section>
         </div>
     </main>
-    <!-- Footer section -->
-    <footer>
 
-    </footer>
+    <!-- Footer section -->
+<footer class="bg-white  shadow dark:bg-[#030712] mt-4 max-w-[1440px] mx-auto px-5 mx-auto lg:px-[135px] py-16 lg:py-24">
+  <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+      <div class="sm:flex sm:items-center sm:justify-between">
+          <div>
+            <h2>
+              <a href="#" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <span class="self-center font-raleway text-2xl lg:text-4xl font-extrabold whitespace-nowrap dark:text-white ">P-Ticket</span>
+            </a>
+            </h2>
+            <p class="max-w-[374px] dark:text-[#CDCDD0] mt-4">
+              P-Ticket is a digital platform to make your daily commuting better.
+            </p>
+          </div>
+          <div class="flex flex-col gap-5 flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-white">
+            <ul>
+              <li>
+                  <a href="#" class="hover:underline me-4 md:me-6 text-xl">Download our app</a>
+              </li>
+          </ul>
+          <div class="flex items-center border p-3 rounded-xl">
+            <figure>
+              <img src="images/playstore.png" alt="">
+            </figure>
+            <div class=" ml-4">
+              <span>GET IT ON</span><br>
+              <h2 class="text-xl">Google Play</h2>
+            </div>
+          </div>
+          </div>
+      </div>
+      <hr class="my-6 border-dashed border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <div class="flex gap-3 md:gap-6 justify-between">
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-white"><a href="#" class="hover:underline">@all rights reserved, P-Ticket services limited.2024</a></span>
+        <div class="flex flex-wrap gap-3 md:gap-7">
+          <li class="block text-sm text-gray-500 sm:text-center dark:text-white"><a href="#" class="hover:underline">Terms & condition</a></li>
+          <li class="block text-sm text-gray-500 sm:text-center dark:text-white"><a href="#" class="hover:underline">Return & refund policy</a></li>
+          <li class="block text-sm text-gray-500 sm:text-center dark:text-white"><a href="#" class="hover:underline">Privacy policy</a></li>
+        </div>
+      </div>
+  </div>
+</footer>
+
 </body>
 </html>
