--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!-- Ticket buy container -->
         <div class="mt-14 md:mt-28 min-h-96 bg-secondary-bg rounded-t-[44px] md:rounded-t-[88px] border-t-2 border-primary-bg px-5 lg:px-[135px] pt-11 lg:pt-24 pb-16 lg:pb-28">
           <!-- PH Paribahan section -->
-          <section class="">
+          <section class="mb-14">
             <h1 class="font-raleway font-bold text-3xl md:text-[40px] text-center">Strawberry Paribahan</h1>
             <p class="max-w-[736px] text-[#65676E] font-inter font-normal text-xs md:text-xl text-center mx-auto mt-4 lg:mt-6 mb-6 lg:mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
             <!-- Greenline Paribahan Container -->
@@ -197,11 +197,118 @@
                 </div>
             </div>
           </section>
+          <!-- Select seat container -->
+          <section class="border bg-white p-8 rounded-3xl">
+            <!-- column content -->
+            <div class="flex flex-col lg:flex-row gap-4">
+                  <!-- Column-1 -->
+            <div>
+              <h2 class="font-raleway font-semibold text-2xl mb-6">Select Your Seat</h2>
+              <div class="flex justify-between border-y border-dashed py-4 mb-6">
+                <div class="flex gap-1">
+                  <figure><img src="images/seat-gray.png" alt=""></figure><p>Available</p>
+                </div>
+                <div class="flex gap-1">
+                  <figure><img src="images/seat-green-filled.png" alt=""></figure><p class="text-primary-bg font-inter font-medium text-[18px] ">Selected</p>
+                </div>
+              </div>
+              <div class="mb-6">
+                <figure class="flex justify-end"><img class="bg-[#E5E6E7] px-10 py-3 rounded-xl" src="images/steering-wheel.svg" alt=""></figure>
+              </div>
+              <!-- seat items A -->
+              <div class="flex flex-wrap items-center">
+                <span class="mr-6 pt-4">A</span>
+                <div class="flex flex-wrap items-center gap-3 md:gap-16 mt-4">
+                  <div class="flex ">
+                    <button class="btn px-11 py-4 mr-6">A1</button>
+                    <button class="btn px-11 py-4">A2</button>
+                  </div>
+                  <div class="flex">
+                    <button class="btn px-11 py-4 mr-6">A3</button>
+                    <button class="btn px-11 py-4">A4</button>
+                  </div>
+                </div>
+              </div>
+              <!-- seat items B -->
+              <div class="flex flex-wrap items-center">
+                <span class="mr-6 pt-4">B</span>
+                <div class="flex flex-wrap items-center gap-3 md:gap-16 mt-4">
+                  <div class="flex ">
+                    <button class="btn px-11 py-4 mr-6">B1</button>
+                    <button class="btn px-11 py-4">B2</button>
+                  </div>
+                  <div class="flex">
+                    <button class="btn px-11 py-4 mr-6">B3</button>
+                    <button class="btn px-11 py-4">B4</button>
+                  </div>
+                </div>
+              </div>
+              <!-- seat items C -->
+              <div class="flex flex-wrap items-center">
+                <span class="mr-6 pt-4">C</span>
+                <div class="flex flex-wrap items-center gap-3 md:gap-16 mt-4">
+                  <div class="flex ">
+                    <button class="btn px-11 py-4 mr-6">C1</button>
+                    <button class="btn px-11 py-4">C2</button>
+                  </div>
+                  <div class="flex">
+                    <button class="btn px-11 py-4 mr-6">C3</button>
+                    <button class="btn px-11 py-4">C4</button>
+                  </div>
+                </div>
+              </div>
+              <!-- seat items D -->
+              <div class="flex flex-wrap items-center">
+                <span class="mr-6 pt-4">D</span>
+                <div class="flex flex-wrap items-center gap-3 md:gap-16 mt-4">
+                  <div class="flex ">
+                    <button class="btn px-11 py-4 mr-6">D1</button>
+                    <button class="btn px-11 py-4">D2</button>
+                  </div>
+                  <div class="flex">
+                    <button class="btn px-11 py-4 mr-6">D3</button>
+                    <button class="btn px-11 py-4">D4</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Column-2 -->
+            <div class="flex-1">
+              <h2 class="font-raleway font-semibold text-2xl pb-6 border-b border-dashed">Select Your Seat</h2>
+              <!-- Calculation section -->
+              <div class="bg-secondary-bg p-4 md:p-8 mt-6 rounded-xl">
+                <div class="flex justify-between font-inter font-medium text-[16px] pb-4 border-b border-dashed">
+                  <h3>Seat <span class="bg-primary-bg rounded text-white px-1">0</span></h3>
+                  <h3>Class</h3><h3>Price</h3>
+                </div>
+                <br><br>
+                <hr>
+                <!-- sub total area -->
+                <div class="flex justify-between text-[16px] font-medium">
+                  <h2>Total Price</h2>
+                  <h2>BDT <span>0000</span></h2>
+                </div>
+                <!-- Cupon area -->
+                <form class="max-w-md mx-auto mt-4">
+                  <div class="relative">
+                      <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                      </div>
+                      <input type="text" id="cupon-apply" class="block w-full p-4 ps-2 md:ps-5 text-sm  focus:border-gray-300 rounded-lg bg-white " placeholder="Have any copupon?" required />
+                      <button type="submit" class="text-white absolute end-2.5 bottom-2.5 outline-none border-secondary-bg bg-primary-bg  font-medium rounded-lg text-sm px-4 py-2 ">Apply</button>
+                  </div>
+                </form>
+                <div>
+
+                </div>
+              </div>
+            </div>
+            </div>
+          </section>
         </div>
     </main>
 
     <!-- Footer section -->
-<footer class="bg-white  shadow dark:bg-[#030712] mt-4 max-w-[1440px] mx-auto px-5 mx-auto lg:px-[135px] py-16 lg:py-24">
+<footer class="bg-[#030712]  max-w-[1440px] mx-auto px-5 mx-auto lg:px-[135px] py-16 lg:py-24">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
       <div class="sm:flex sm:items-center sm:justify-between">
           <div>
