--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 clifford: '#da373d',
                 'primary-bg': '#1DD100',
                 'secondary-bg': '#F7F8F8',
+                'modal-bg': '#27AE60',
               }
             }
           }
@@ -297,9 +298,46 @@
                       <button type="submit" class="text-white absolute end-2.5 bottom-2.5 outline-none border-secondary-bg bg-primary-bg  font-medium rounded-lg text-sm px-4 py-2 ">Apply</button>
                   </div>
                 </form>
+                <!-- Customer info section -->
                 <div>
 
-                </div>
+                  <form>
+                    <div class="mb-6">
+                        <label for="name" class="block mb-2 text-[16px] font-semibold">Passenger Name*</label>
+                        <input type="text" id="name" class=" border border-gray-300  text-[16px] rounded-lg block w-full p-4 dark:placeholder-gray-400 " placeholder="Enter your name" required />
+                    </div>
+                    <div class="mb-6">
+                        <label for="phone" class="block mb-2 text-[16px] font-semibold">Phone Number*</label>
+                        <input type="tel" id="phone" class=" border border-gray-300  text-[16px] rounded-lg block w-full p-4 dark:placeholder-gray-400 " placeholder="Enter your phone number" required />
+                    </div>
+                    </div>
+                    <div class="mb-6">
+                        <label for="email" class="block mb-2 text-[16px] font-semibold">Email ID</label>
+                        <input type="email" id="email" class=" border border-gray-300  text-[16px] rounded-lg block w-full p-4 dark:placeholder-gray-400 " placeholder="Enter your email id" required />
+                    </div>
+                    <div>
+                      <input id="modal-open-btn" class="bg-primary-bg p-5 rounded-lg block w-full cursor-pointer text-xl font-extrabold font-raleway text-white" type="submit" value="Next">
+                    </div>
+                    <!-- Modal section -->
+                    <!-- Modal Background -->
+                    <div id="modal-background" class="fixed top-0 left-0 w-full h-full bg-black opacity-50 hidden"></div>
+                
+                    <!-- Modal Content -->
+                    <div id="modal-content" class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-8 rounded shadow-lg max-w-2xl py-14 w-full hidden">
+                        <figure class="flex justify-center mb-9"><img src="images/success.png" alt=""></figure>
+                        <h2 class="text-xl text-center font-bold mb-4 text-modal-bg">SUCCESS</h2>
+                        <div class="max-w-md mx-auto text-xl">
+                            <p class="text-center font-medium">Thank you for Booking Our Bus Seats. 
+                                We are working hard to find the best service and deals for you.</p>
+                            <p class="text-center font-light">
+                                Shortly you will find a confirmation in your email.
+                            </p>
+                        </div>
+                        <div class="lg:px-36">
+                            <button id="modal-close-btn" class="w-full mt-4 text-center bg-modal-bg text-white font-bold  lg:px-28 py-4 rounded-3xl block">Close Modal</button>
+                        </div>
+                    </div>
+                </form>
               </div>
             </div>
             </div>
@@ -314,7 +352,7 @@
           <div>
             <h2>
               <a href="#" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <span class="self-center font-raleway text-2xl lg:text-4xl font-extrabold whitespace-nowrap dark:text-white ">P-Ticket</span>
+                <span class="self-center font-raleway text-2xl lg:text-4xl font-extrabold whitespace-nowrap dark:text-white ">S-Ticket</span>
             </a>
             </h2>
             <p class="max-w-[374px] dark:text-[#CDCDD0] mt-4">
@@ -349,6 +387,7 @@
       </div>
   </div>
 </footer>
-
+<!-- JavaScript to handle modal functionality -->
+<script src="JS/modal.js"></script>
 </body>
 </html>
